--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <div *ngIf="auth.isLoading$ | async; else ready">
+    <!--<h1>Loading...</h1>-->
+  </div>
+  <ng-template #ready>
+    <ion-router-outlet></ion-router-outlet>
+  </ng-template>
 </ion-app>
