--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
     </ion-chip>
     <ion-chip slot="end" (click)="openCharacterModal()">
       <ion-icon src="/assets/icon/character.svg" color="secondary"></ion-icon>
-      <ion-label>{{userService.activeUser?.givenName}}</ion-label>
+      <ion-label>{{userService.activeUser?.name}}</ion-label>
     </ion-chip>
   </ion-toolbar>
 </ion-header>
