--- a/src/app/home/character-modal/character-modal.component.html
+++ b/src/app/home/character-modal/character-modal.component.html
@@ -6,7 +6,16 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" *ngIf="user">
+  <div class="character-summary">
+    <h1 class="player-title">{{user.name}}</h1>
+    <p>Level {{user.xpLevelReport.level}} • {{user.xpLevelReport.xp}} XP</p>
+    <p>You have {{user.xpLevelReport.nextLevelProgress}}% to go</p>
+    <ion-progress-bar [value]="user.xpLevelReport.nextLevelProgress/100"></ion-progress-bar>
+    <p>{{user.xpLevelReport.toNextLevel}} XP for next level</p>
+  </div>
+  <hr>
+  <h2>Inventory</h2>
   <ion-grid class="inventory-list">
     <ion-row *ngFor="let item of inventory" class="inventory-item ion-align-items-center">
       <ion-col>
