--- a/src/app/home/character-modal/character-modal.component.scss
+++ b/src/app/home/character-modal/character-modal.component.scss
@@ -1,3 +1,11 @@
+.character-summary {
+  text-align: center;
+
+  h1 {
+    margin-top: 0;
+  }
+}
+
 .inventory-list {
   padding-left: 0;
   padding-right: 0;
