quick code cleanup

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,17 +1,14 @@
-<!--
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
--->
-
 <ion-header class="map-toolbar">
   <ion-grid>
     <ion-row class="ion-align-items-center">
-      <ion-col></ion-col>
+      <ion-col>
+        <!--
+        <ion-chip>
+          <ion-icon src="/assets/icon/two-coins.svg" class="coin-icon"></ion-icon>
+          <ion-label>0 (+0/s)</ion-label>
+        </ion-chip>
+        -->
+      </ion-col>
       <ion-col *ngIf="userService.activeUser" (click)="openCharacterModal()" size="6" class="ion-text-center">
         <h1 class="player-title">{{userService.activeUser.name}}</h1>
         <p>Level {{userService.activeUser.xpLevelReport.level}}</p>
@@ -24,30 +21,6 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <!--
-  <div class="map-toolbar">
-    <div></div>
-    <div *ngIf="userService.activeUser" (click)="openCharacterModal()" class="character-summary">
-      <h1 class="player-title">{{userService.activeUser.name}}</h1>
-      <p>Level {{userService.activeUser.xpLevelReport.level}}</p>
-      <ion-progress-bar [value]="userService.activeUser.xpLevelReport.nextLevelProgress/100"></ion-progress-bar>
-    </div>
-    <div class="ion-text-right ion-padding-right ion-align-items-center">
-      <ion-button size="small" slot="end">
-        <ion-icon slot="icon-only" name="menu"></ion-icon>
-      </ion-button>
-    </div>
-  </div>
-
-  <ion-chip  (click)="openCharacterModal()">
-    <ion-icon src="/assets/icon/character.svg" color="secondary"></ion-icon>
-    <ion-label>{{userService.activeUser?.name}}</ion-label>
-  </ion-chip>
-  <ion-chip>
-    <ion-icon src="/assets/icon/two-coins.svg" class="coin-icon"></ion-icon>
-    <ion-label>0 (+0/s)</ion-label>
-  </ion-chip>
-  -->
 </ion-header>
 
 <div class="map" id="map"></div>
@@ -57,6 +30,7 @@
     <ion-icon name="construct-sharp"></ion-icon>
   </ion-fab-button>
 </ion-fab>
+
 <ion-modal #systemInfo trigger="open-build-menu">
   <ng-template>
     <ion-header>
