--- a/src/global.scss
+++ b/src/global.scss
@@ -40,7 +40,7 @@
   font-weight: 600;
   src: url('./assets/fonts/Cinzel-SemiBold.ttf');
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2, /*h3, h4, h5, h6*/ {
   font-family: "Cinzel", "Times New Roman", serif;
   font-weight: 500;
 }
@@ -48,6 +48,15 @@ h1 {font-size: 26px}
 h2 {font-size: 20px}
 h3 {font-size: 16px}
 p {margin-top: 0.5em}
+
+.detail-line {
+  font-size: 0.8em;
+  margin: 0.5em 0;
+
+  &.compact {
+    margin: 0;
+  }
+}
 
 .marker { /* TODO: Should not be here */
   display: block;
