--- a/src/app/home/dungeon-modal/dungeon-modal.component.html
+++ b/src/app/home/dungeon-modal/dungeon-modal.component.html
@@ -7,10 +7,11 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding" *ngIf="locationObject">
+  <!--<div class="modal-bg"></div>-->
   <h1>{{locationObject.monster.name}}</h1>
   <p class="monster-level">Level {{locationObject.level}} {{locationObject.monster.classification}}</p>
   <p class="monster-description quote-box">{{locationObject.monster.description}}</p>
-  <div *ngIf="analysis; else analyzeButton" class="ion-text-center ion-margin-bottom">
+  <div *ngIf="analysis;" class="ion-text-center ion-margin-bottom">
     <h2>Assessment: <span [class]="'assessment-'+analysis.assessment.toLowerCase()">{{analysis.assessment}}</span></h2>
     <h3>
       Chance of success: {{analysis.chanceOfSuccess}}%
@@ -23,18 +24,34 @@
     <ion-text color="danger">
       <p *ngFor="let modifier of analysis.modifiersNegative" class="detail-line compact">{{modifier}}</p>
     </ion-text>
-    <p class="detail-line">
-      Chance of death: {{analysis.chanceOfDeath}}%<br>
-      Chance of inventory loss: {{analysis.chanceOfInventoryLoss}}%<br>
-      Chance of equipment loss: {{analysis.chanceOfEquipmentLoss}}%
-    </p>
+    <p *ngIf="analysis.chanceOfDeath" class="detail-line">Risk of death: {{analysis.chanceOfDeath}}%</p>
+    <p *ngIf="analysis.chanceOfInventoryLoss" class="detail-line">Chance of inventory loss: {{analysis.chanceOfInventoryLoss}}%</p>
+    <p *ngIf="analysis.chanceOfEquipmentLoss" class="detail-line">Chance of equipment loss: {{analysis.chanceOfEquipmentLoss}}%</p>
     <ion-text color="secondary">
-      <p *ngFor="let modifier of analysis.modifiersDeath" class="detail-line compact">{{modifier}}</p>
+      <p *ngFor="let modifier of analysis.modifiersDeath" class="detail-line">{{modifier}}</p>
     </ion-text>
   </div>
+  <ion-grid class="ion-no-padding">
+    <ion-row>
+      <ion-col>
+        <ion-button expand="block" color="dark" (click)="analyze()" [disabled]="loading || analysis">
+          <ion-icon slot="start" src="/assets/icon/magnifying-glass.svg"></ion-icon> Analyze
+        </ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button expand="block" color="dark" (click)="changeEquipment()" [disabled]="loading">
+          <ion-icon slot="start" src="/assets/icon/switch-weapon.svg"></ion-icon> Change equipment
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <!--
   <ng-template #analyzeButton>
     <ion-button expand="full" (click)="analyze()" [disabled]="loading">Analyze</ion-button>
   </ng-template>
   <ion-button expand="full" (click)="changeEquipment()" [disabled]="loading">Change equipment</ion-button>
-  <ion-button expand="full" (click)="battle()" [disabled]="loading">Battle!</ion-button>
+  -->
+  <ion-button expand="block" (click)="battle()" [disabled]="loading">
+    <ion-icon slot="start" src="/assets/icon/light-sabers.svg"></ion-icon> Battle!
+  </ion-button>
 </ion-content>
