--- a/src/app/home/dungeon-modal/dungeon-modal.component.scss
+++ b/src/app/home/dungeon-modal/dungeon-modal.component.scss
@@ -1,3 +1,11 @@
+.modal-bg {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-image: url('https://assetstorev1-prd-cdn.unity3d.com/preview/00081cf3.2a5fd970-5cfd-44b2-9015-39d47a30a9ce.png');
+  filter: grayscale(100%);
+  opacity: 0.9;
+}
 .monster-level {
   font-style: italic;
   font-weight: 300;
