--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,12 +5,12 @@
 
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #A5292A;
+  --ion-color-primary-rgb: 165,41,42;
   --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #912425;
+  --ion-color-primary-tint: #ae3e3f;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
@@ -85,11 +85,11 @@
 
   body {
     --ion-color-primary: #A5292A;
-    --ion-color-primary-rgb: 66,140,255;
+    --ion-color-primary-rgb: 165,41,42;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary-shade: #912425;
+    --ion-color-primary-tint: #ae3e3f;
 
     --ion-color-secondary: #50c8ff;
     --ion-color-secondary-rgb: 80,200,255;
