--- a/src/app/home/dungeon-modal/dungeon-modal.component.html
+++ b/src/app/home/dungeon-modal/dungeon-modal.component.html
@@ -13,10 +13,6 @@
   <p class="monster-description quote-box">{{locationObject.monster.description}}</p>
   <div *ngIf="analysis;" class="ion-text-center ion-margin-bottom">
     <h2>Assessment: <span [class]="'assessment-'+analysis.assessment.toLowerCase()">{{analysis.assessment}}</span></h2>
-    <h3>
-      Chance of success: {{analysis.chanceOfSuccess}}%
-      <span *ngIf="analysis.overkill">({{analysis.overkill}} overkill)</span>
-    </h3>
     <p class="detail-line compact">Base chance: {{analysis.baseChance}}%</p>
     <ion-text color="success">
       <p *ngFor="let modifier of analysis.modifiersPositive" class="detail-line compact">{{modifier}}</p>
@@ -24,22 +20,26 @@
     <ion-text color="danger">
       <p *ngFor="let modifier of analysis.modifiersNegative" class="detail-line compact">{{modifier}}</p>
     </ion-text>
-    <p *ngIf="analysis.chanceOfDeath" class="detail-line">Risk of death: {{analysis.chanceOfDeath}}%</p>
-    <p *ngIf="analysis.chanceOfInventoryLoss" class="detail-line">Chance of inventory loss: {{analysis.chanceOfInventoryLoss}}%</p>
-    <p *ngIf="analysis.chanceOfEquipmentLoss" class="detail-line">Chance of equipment loss: {{analysis.chanceOfEquipmentLoss}}%</p>
-    <ion-text color="secondary">
-      <p *ngFor="let modifier of analysis.modifiersDeath" class="detail-line">{{modifier}}</p>
-    </ion-text>
+    <h3>
+      Chance of success: {{analysis.chanceOfSuccess}}%
+      <span *ngIf="analysis.overkill">({{analysis.overkill}} overkill)</span>
+    </h3>
+    <p *ngIf="analysis.chanceOfDeath" class="detail-line"><b>Risk of death: {{analysis.chanceOfDeath}}%</b></p>
+<!--    <p *ngIf="analysis.chanceOfInventoryLoss" class="detail-line">Chance of inventory loss: {{analysis.chanceOfInventoryLoss}}%</p>-->
+<!--    <p *ngIf="analysis.chanceOfEquipmentLoss" class="detail-line">Chance of equipment loss: {{analysis.chanceOfEquipmentLoss}}%</p>-->
+<!--    <ion-text color="secondary">-->
+<!--      <p *ngFor="let modifier of analysis.modifiersDeath" class="detail-line">{{modifier}}</p>-->
+<!--    </ion-text>-->
   </div>
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col>
-        <ion-button expand="block" color="dark" (click)="analyze()" [disabled]="loading || analysis">
-          <ion-icon slot="start" src="/assets/icon/magnifying-glass.svg"></ion-icon> Analyze
+        <ion-button expand="block" fill="outline" color="secondary" (click)="analyze()" [disabled]="loading || analysis">
+          <ion-icon color="secondary" slot="start" src="/assets/icon/magnifying-glass.svg"></ion-icon> Analyze
         </ion-button>
       </ion-col>
       <ion-col>
-        <ion-button expand="block" color="dark" (click)="changeEquipment()" [disabled]="loading">
+        <ion-button expand="block" fill="outline" color="dark" (click)="changeEquipment()" [disabled]="loading">
           <ion-icon slot="start" src="/assets/icon/switch-weapon.svg"></ion-icon> Change equipment
         </ion-button>
       </ion-col>
@@ -51,7 +51,7 @@
   </ng-template>
   <ion-button expand="full" (click)="changeEquipment()" [disabled]="loading">Change equipment</ion-button>
   -->
-  <ion-button expand="block" (click)="battle()" [disabled]="loading">
+  <ion-button expand="block" color="danger" (click)="battle()" [disabled]="loading">
     <ion-icon slot="start" src="/assets/icon/light-sabers.svg"></ion-icon> Battle!
   </ion-button>
 </ion-content>
