--- a/src/global.scss
+++ b/src/global.scss
@@ -49,6 +49,58 @@ h2 {font-size: 20px}
 h3 {font-size: 16px}
 p {margin-top: 0.5em}
 
+.ornate-frame-base {
+  -webkit-mask-image: url(/assets/frame-corner.svg);
+  content: "";
+  position: absolute;
+  background-color: rgb(230, 195, 153);
+  width: 93px;
+  height: 93px;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: top center;
+  -webkit-mask-size: cover;
+}
+.ornate-frame-top {
+  position: relative;
+  &::before {
+    @extend .ornate-frame-base;
+    top: 0;
+    left: 0;
+    transform: scaleX(-1);
+  }
+  &::after {
+    @extend .ornate-frame-base;
+    top: 0;
+    right: 0;
+  }
+}
+.ornate-frame-bottom {
+  position: relative;
+  &::before {
+    @extend .ornate-frame-base;
+    bottom: 0;
+    left: 0;
+    transform: scale(-1);
+  }
+  &::after {
+    @extend .ornate-frame-base;
+    bottom: 0;
+    right: 0;
+    transform: scaleY(-1);
+  }
+}
+
+.quote-box {
+  background: #F8F3D6;
+  border-width: 2px 2px;
+  border-style: double solid;
+  border-color: #D2B56B #D2B56B;
+  color: #58170E;
+  padding: 0.5em;
+
+  box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.65);
+}
+
 .detail-line {
   font-size: 0.8em;
   margin: 0.5em 0;
