--- a/src/app/home/character-modal/character-modal.component.scss
+++ b/src/app/home/character-modal/character-modal.component.scss
@@ -3,6 +3,11 @@
   padding: 0 4em 0.5em;
 }
 
+.coin-icon {
+  color: #ffbf54;
+  ion-icon { fill: #ffbf54 }
+}
+
 .inventory-list {
   padding-left: 0;
   padding-right: 0;
