Tweak spooked npc messages

--- a/src/app/home/npc-modal/npc-modal.component.html
+++ b/src/app/home/npc-modal/npc-modal.component.html
@@ -32,7 +32,7 @@
     </ion-segment>
 
     <p *ngIf="locationObject.spooked; else openForBusiness" class="ion-text-center">
-      This npc will not trade as long as there are nearby.
+      This npc will not trade as long as there are monsters nearby.
     </p>
   </div>
 
