user bases with inventories

--- a/src/app/components/modal-header/modal-header.component.html
+++ b/src/app/components/modal-header/modal-header.component.html
@@ -1,7 +1,7 @@
 <ion-grid class="ion-no-padding">
   <ion-row class="ion-align-items-center">
     <ion-col *ngIf="icon" size="auto" class="ion-padding-end">
-      <ion-icon [src]="icon" [color]="iconColor" class="portrait header-icon-size"></ion-icon>
+      <ion-icon [src]="icon" [color]="iconColor" class="header-icon-size" [ngClass]="{'portrait': iconBorder}"></ion-icon>
     </ion-col>
     <ion-col class="relative">
       <h1 *ngIf="title" class="ion-no-margin">{{title}}</h1>
@@ -10,4 +10,4 @@
     </ion-col>
   </ion-row>
 </ion-grid>
-<p *ngIf="quote" class="monster-description quote-box ion-margin-top">{{quote}}</p>
+<p *ngIf="quote" class="monster-description quote-box">{{quote}}</p>
