--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,10 @@
   <ng-template #ready>
     <ion-router-outlet></ion-router-outlet>
   </ng-template>
-  <div class="debug">
+  <div class="debug ion-text-right">
     <span *ngIf="location.permissionError; else coordinates">permissionError=true</span>
     <ng-template #coordinates>{{location.lat}}, {{location.lng}}</ng-template>
+    <div>Server time: {{api.serverTime | date:'yyyy-MM-dd HH:mm:ss'}}</div>
+    <div>Local time: {{localTime | date:'yyyy-MM-dd HH:mm:ss'}}</div>
   </div>
 </ion-app>
