--- a/src/app/components/map-marker/map-marker.component.html
+++ b/src/app/components/map-marker/map-marker.component.html
@@ -1,4 +1,7 @@
-<div (click)="handleClick()" [ngStyle]="{'width.px': iconSize, 'height.px': iconSize}" class="{{getMarkerClass()}}">
-  <div class="marker-icon" [innerHTML]="dynamicSvg"></div>
-  <ion-icon *ngIf="location.npcDetails?.spooked" src="/assets/icon/location/spooked-npc.svg" color="dark" slot="start" class="marker-icon addon-icon"></ion-icon>
+<div (click)="handleClick()" class="{{getMarkerClass()}}">
+  <div *ngIf="location.expiresAt" class="marker-timer">{{location.expiresAt | countdown}}</div>
+  <div class="marker-graphics" [ngStyle]="{'width.px': iconSize, 'height.px': iconSize}">
+    <div class="marker-icon" [innerHTML]="dynamicSvg"></div>
+    <ion-icon *ngIf="location.npcDetails?.spooked" src="/assets/icon/location/spooked-npc.svg" color="dark" slot="start" class="marker-icon addon-icon"></ion-icon>
+  </div>
 </div>
