--- a/src/app/components/map-marker/map-marker.component.scss
+++ b/src/app/components/map-marker/map-marker.component.scss
@@ -1,12 +1,26 @@
 .marker {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border: none;
   border-radius: 50%;
   cursor: pointer;
   padding: 0;
 
+  .marker-timer {
+    display: inline-block;
+    margin-bottom: 2px;
+    padding: 3px 6px;
+    border-radius: 10px;
+    text-align: center;
+    line-height: 1em;
+    white-space: nowrap;
+    color: #eee;
+    background: rgba(0, 0, 0, 0.3);
+  }
+
   .marker-icon {
-    position: absolute;
+    position: relative;
     font-size: 32px;
     width: 100%;
     height: 100%;
@@ -14,6 +28,7 @@
     background-repeat: no-repeat;
 
     &.addon-icon {
+      position: absolute;
       right: 0;
       top: -65%;
       width: 80%;
