Show runestones in modals

--- a/src/app/components/modal-header/modal-header.component.html
+++ b/src/app/components/modal-header/modal-header.component.html
@@ -10,4 +10,4 @@
     </ion-col>
   </ion-row>
 </ion-grid>
-<p *ngIf="quote" class="monster-description quote-box">{{quote}}</p>
+<p *ngIf="quote" class="quote-box">{{quote}}</p>
