--- a/src/app/home/location-modal/runestone-modal/runestone-modal.component.html
+++ b/src/app/home/location-modal/runestone-modal/runestone-modal.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title slot="start">Runestone</ion-title>
+    <ion-title slot="start"></ion-title>
     <ion-buttons slot="end">
       <ion-button color="medium" (click)="returnToMap()">
         <ion-icon name="close"></ion-icon>
@@ -9,15 +9,18 @@
   </ion-toolbar>
 </ion-header>
 <ion-content *ngIf="locationObject && !loading">
-  <div class="padding-10">
-    <app-modal-header
-      [title]="locationObject.name"
-      icon="/assets/icon/location/runestone.svg"
-      [iconBorder]="false"
-    >
-    </app-modal-header>
-  </div>
-  <div class="padding-10 no-padding-top">
+  <div class="runestone-flex-wrap">
+    <div class="padding-10">
+      <app-modal-header
+        [title]="locationObject.name"
+        icon="/assets/icon/location/runestone.svg"
+        [iconBorder]="false"
+      >
+      </app-modal-header>
+    </div>
     <p class="runestone">{{locationObject.text}}</p>
+    <div class="padding-10 runestone-controls">
+      <ion-button expand="block" fill="solid" color="dark" (click)="returnToMap()">Journey onwards</ion-button>
+    </div>
   </div>
 </ion-content>
