--- a/src/app/home/location-modal/runestone-modal/runestone-modal.component.scss
+++ b/src/app/home/location-modal/runestone-modal/runestone-modal.component.scss
@@ -9,6 +9,7 @@
   display: block;
   margin: 10px 10px 0 10px;
   padding: 1.5em 0.8em;
+  min-height: 40%;
   border-style: double solid;
   border-width: 0 1px 1px 1px;
   background: #565659;
